# MLOPS

practis/: .gitignore  Makefile  README.md  data.dvc  pyproject.toml
